package com.kshavrin.mymoney.feature.transaction.categorygrid

const val CATEGORY_GRID_ADD_CELL_TAG =
    com.kshavrin.mymoney.core.designsystem.form.CATEGORY_GRID_ADD_CELL_TAG
const val CATEGORY_GRID_TAG =
    com.kshavrin.mymoney.core.designsystem.form.CATEGORY_GRID_TAG

