...
    <string name="dictionaries_currency_new">New currency</string>
    <string name="dictionaries_currency_edit">Edit currency</string>

    <string name="dictionaries_section_expense">Expense</string>
    <string name="dictionaries_section_income">Income</string>

    <string name="dictionaries_field_name">Name</string>
    <string name="dictionaries_field_kind">Kind</string>
    <string name="dictionaries_kind_expense">Expense</string>
    <string name="dictionaries_kind_income">Income</string>
    <string name="dictionaries_field_icon">Icon</string>
    <string name="dictionaries_field_color">Color</string>
    <string name="dictionaries_field_currency">Currency</string>
...
    <string name="dictionaries_type_savings">Savings</string>

    <string name="dictionaries_choose_icon">Choose icon</string>
    <string name="dictionaries_icon_option_cd">Choose this icon</string>
    <string name="dictionaries_choose_color">Choose color</string>

    <string name="dictionaries_save">Save</string>
    <string name="dictionaries_delete">Delete</string>
    <string name="dictionaries_cancel">Cancel</string>
    <string name="dictionaries_ok">OK</string>
    <string name="dictionaries_back">Back</string>
    <string name="dictionaries_add">Add</string>

...
