<resources>
    <string name="dashboard_title">MyMoney</string>
    <string name="dashboard_menu">Open menu</string>
    <string name="dashboard_back">Back</string>
    <string name="dashboard_transfer">Transfer</string>
    <string name="dashboard_search">Search</string>
    <string name="dashboard_overflow_menu">More options</string>
    <string name="dashboard_settings_menu">Settings</string>
    <string name="dashboard_balance">Balance</string>
    <string name="dashboard_balance_for_period">BALANCE FOR %1$s</string>
    <string name="dashboard_balance_unavailable">Balance &#8212;</string>
...
    <string name="period_interval_invalid">Start date must not be after end date</string>
    <string name="period_previous">Previous period</string>
    <string name="period_next">Next period</string>

    <string name="fab_expense">Add expense</string>
    <string name="fab_income">Add income</string>
    <string name="fab_expense_content_description">Expense</string>
    <string name="fab_income_content_description">Income</string>
    <string name="fab_transfer_content_description">Transfer</string>
    <string name="fab_expense_label">EXPENSE</string>
    <string name="fab_income_label">INCOME</string>
    <string name="fab_transfer">Transfer</string>

...
